--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
      <!--<link rel="stylesheet" href="static/css/reset.css" />-->
     <link rel="stylesheet" href="static/css/index.css" />
+    <link rel="stylesheet" href="static/css/grid.css" />
   </head>
   <body>
   <div id="app">
