--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <!--<link rel="stylesheet" href="static/css/reset.css" />-->
     <link rel="stylesheet" href="static/css/index.css" />
     <link rel="stylesheet" href="static/css/grid.css" />
+    <script src="http://js.touclick.com/js.touclick?b=b85d9b8e-adfb-47da-a58d-8f30cef74f1a"></script>
   </head>
   <body>
   <div id="app">
